--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <title>Handpose with Webcam</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="/style.css">
 
 </head>
 
 <body onload="render();">
-    <h1>Handpose with Webcam</h1>
+    <!-- <h1>Handpose with Webcam</h1> -->
     <script src="sketch.js"></script>
     <script src="beard.js"></script>
     <script src="timer.js"></script>
     
     <header id="top-intro">
-        <h1>Brush your Teeth</h1>
-        <button>?</button>
+        <h1 id="h1-tittle-brush">Brush your Teeth</h1>
+        <button id="about-button"><h1>?</h1></button>
     </header>
 
     <div id="videoSpace">
@@ -37,6 +38,8 @@
             <canvas id="timerCanvas"></canvas>
         </div>
     </div>
+
+    <div id="sound"><button id="sound-button"><h1>♫</h1></button></div>
 </body>
 
 </html>
